pages/style.css
body {
  font-family: Arial;
  margin: 0px;
  padding: 0px;
  background: white;
}

/************************
 Style for the header bar
 ************************/

header {
  background-color: #ffcd00;
  padding: 0px;
  margin: 0px;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
}
#mobile_dropdown_menu_button {
  display: none;
}
#logo_container {
  height: 50px;
  width: 200px;
  align-self: flex-start;
  background-image: url(logo.png);
}
#logo_container:hover {
  background-color: #fcdf65;
}
#page_title_container {
  line-height: 50px;
  align-self: flex-start;
  height: 50px;
}
#page_title {
  font-size: 1.75em;
  margin: 0px;
  color: black;
  text-decoration: none;
  font-weight: bold;
  padding-left: 10px;
}
a#page_title:hover {
 text-decoration: underline;
}

/*********************
 Style for the sidebar
 *********************/

#sidebar {
  flex: 0 0 200px;
  width: 200px;
  align-self: flex-start;
  border-right: 4px solid #d4d4d4;
  border-bottom: 4px solid #d4d4d4;
  background: #EEEEEE;
  display: block;
}
.sidebar_title_container {
  background-color: #d4d4d4;
  padding: 5px;
}
.sidebar_title_text {
  font-size: 1.1em;
  color: black;
  font-weight: bold;
  margin: 0px;
}
a.sidebar_title_text {
  text-decoration: none;
}
a.sidebar_title_text:hover {
  text-decoration: underline;
}
.sidebar_content_container {
  margin: 5px;
  font-size: 1em;
}
.sidebar_content_dropdown {
  height: calc(10px + 1em);
  overflow: hidden;
}
.sidebar_content_dropdown:hover {
  height: auto;
  background-color: #e3e3e3;
}
.sidebar_content_container a {
  color: black;
  text-decoration: none;
  padding: 5px;
  display: block;
}
.sidebar_content_container a:hover {
  background-color: #ffcd00;
}
.sidebar_submenu a {
  padding-left: 10px;
  font-size: 0.85em;
}
.sidebar_submenu .sidebar_submenu a {
  padding-left: 20px;
  font-size: 0.8em;
}
#sidebar input {
  height: 1.5em;
}
#sidebar input[type="text"], #sidebar input[type="text"]:focus {
  border: 0px;
  outline: none;
  border-radius: 0px;
}
#sidebar input[type="submit"] {
  background-color: #d4d4d4;
  border: 0px;
}
#sidebar input[type="submit"]:hover {
  background-color: #ffcd00;
  border: 0px;
}

/******************************
 Style for main article content
 ******************************/

#main {
  /* Entire page height minus header, footer, and padding heights.
     Must be updated any time the relevant values change. This
     ensures the footer is never in the middle of the page for
     shorter articles. */
  min-height: calc(100vh - 190px);
  margin: 0px auto 0px auto;
  flex-grow: 1;
  max-width: 1350px;
  background: white;
  padding: 10px;
}
.main_infobox p > a, .main_infobox > h1 > a {
  color: #009dc3;
  text-decoration: none;
}
.main_infobox p > a:hover, .main_infobox > h1 > a:hover {
  text-decoration: underline;
}
.main_infobox {
  margin-left: -7px;
  margin-bottom: 25px;
  border: 2px solid transparent;
  padding: 5px;
}
.main_infobox:target {
  background: #EEEEEE;
  border: 2px solid black;
}
.main_infobox > p:first-child {
  margin-top: 0px;
}
.main_infobox > p:last-child {
  margin-bottom: 0px;
}
.main_infobox_header {}

#references li {
  margin-bottom: 10px;
}

#main input[type=text] {
  height: 1.5em;
  width: 5em;
}
#main input[type=submit] {
  height: 1.5em;
  background-color: #d4d4d4;
  border: 0px;
}
#main input[type=submit]:hover {    
  background-color: #ffcd00;
  border: 0px;
}
#main input[type=text], #main input[type=text]:focus {
  border: 1px solid black;
  outline: none;
  border-radius: 0px;
}

/********************
 Style for the footer
 ********************/

footer {
  color: #959595;
  text-align: center;
  line-height: 1.75em;
  min-height: 100px;
  width: 100%;
  background: #EEEEEE;
  padding-top: 10px;
  padding-bottom: 10px;
}
footer p {margin: 0px;}
footer  a {
  color: #959595;
  text-decoration: none;
}
footer a:hover {text-decoration: underline;}

/***************************
 Style for identity articles
 ***************************/

.identity_container {
  margin-bottom: 3.5em;
} 
.identity_container a {
  color: #009dc3;
  text-decoration: none;
}
.identity_container a:hover {
  text-decoration: underline;
}
#identity_graph {
  float: right;
}
#identity_graph img {
  height: 250px;
  width: 250px;    
}
#identity_graph figcaption {
  text-align: center;
}
#series_expansion {line-height: 1.5em;}

/********************
 Touch screen support
*********************/

@media (pointer: coarse) {
  #mobile_dropdown_menu_button {
    display: block;
    line-height: 100px;
    font-size: 3em;
    width: 80px;
    text-align: center;
  }
  #page_title_container {
    display: none;
  }
  #logo_container {
    margin-left: max(0px, calc(50% - 180px));
    margin-top: 25px;
    margin-bottom: 25px;
  }
  #main {
    min-height: calc(100vh - 240px);
  }
  #sidebar {
    display: none;
    border: none;
    flex-grow: 1;
    padding: 0px 15%;
    min-height: calc(100vh - 220px);
  }
  .sidebar_content_dropdown {
    height: auto;
  }
  .sidebar_title_text {
    font-size: 2em;
  }
  .sidebar_content_container {
    font-size: 1.8em;
  }
}

/************
 Bibliography
*************/

#bibliography_container {
  width: 60%;
  margin-left: 20%;
}

#bibliography_container > div {
	display: none;
}

